<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:miuizer="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx
		android:title="@string/miuizer"
		android:key="pref_key_miuizer_settings">
		<tv.withaibuild.customiuizer.prefs.ListPreferenceEx
			android:key="pref_key_miuizer_locale"
			android:title="@string/miuizer_locale_title"
			android:summary="@string/miuizer_locale_summ"
			android:entries="@array/placeholder_array"
			android:entryValues="@array/placeholder_array_strval"
			miuizer:valueAsSummary="true"
			android:defaultValue="auto" />
	</tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx>

	<tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx
		android:title="@string/about_support_category"
		android:key="pref_key_about_support">
		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_about_donate"
			android:title="@string/about_donate_title"
			android:summary="@string/about_donate_summary"
			android:persistent="false" />
		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_about_repository"
			android:title="@string/about_repository_title"
			android:summary="@string/about_repository_summary"
			android:persistent="false" />
		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_about_contact"
			android:title="@string/about_contact_title"
			android:summary="@string/about_contact_summary"
			android:persistent="false" />
	</tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx>

	<tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx
		android:title="@string/about_notes_category">
		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:title="@string/about_restart_notes_title"
			android:summary="@string/about_dynamic"
			android:selectable="false"
			android:persistent="false" />
		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:title="@string/about_compatibility_notes_title"
			android:summary="@string/about_unsupported"
			android:selectable="false"
			android:persistent="false" />
	</tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx>

</PreferenceScreen>
