<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:miuizer="http://schemas.android.com/apk/res-auto"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:key="pref_key_system">

	<tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx
		android:key="pref_key_system_cat_statusbar"
		android:title="@string/system_mods_statusbar_statusbar">

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbaricons_cat"
			android:title="@string/system_statusbaricons_title"
			android:summary="@string/system_statusbaricons_summ" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbaricons_atright_cat"
			android:title="@string/system_statusbaricons_change_position_title" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbar_mobile_signal_cat"
			android:title="@string/system_statusbar_mobile_signal_cat_title" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_networkindicator_wifi"
			android:title="@string/system_networkindicator_wifi_title"
			android:defaultValue="false" />

		<tv.withaibuild.customiuizer.prefs.ListPreferenceEx
			android:key="pref_key_system_statusbaricons_wifistandard"
			android:title="@string/system_statusbaricons_wifistandard_title"
			android:entries="@array/onoff"
			android:entryValues="@array/onoff_val"
			miuizer:valueAsSummary="true"
			android:defaultValue="1" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbar_clocktweak_cat"
			android:title="@string/system_statusbar_clocktweak_title" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_detailednetspeed_cat"
			android:title="@string/system_netspeed_cat_title" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbarcontrols_cat"
			android:summary="@string/system_statusbarcontrols_summ"
			android:title="@string/system_statusbarcontrols_title" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbar_batterytempandcurrent_cat"
			android:title="@string/system_statusbar_batterytempandcurrent_title" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_statusbar_batterystyle_cat"
			android:title="@string/system_statusbar_batterystyle_title" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="pref_key_system_batteryindicator_cat"
			android:title="@string/system_batteryindicator_title"
			android:summary="@string/system_batteryindicator_summ" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:key="prefs_system_statusbar_showdevicetemperature_cat"
			android:title="@string/system_statusbar_showdevicetemperature_title" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbar_dualrows"
			android:title="@string/system_statusbar_dualrows_title"
			android:summary="@string/system_statusbar_dualrows_summ" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbar_dualrows_clock_span2rows"
			android:dependency="pref_key_system_statusbar_dualrows"
			miuizer:indentLevel="1"
			android:title="@string/system_statusbar_clock_spread2rows_title" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_dualrows_left_ratio"
			android:dependency="pref_key_system_statusbar_dualrows"
			miuizer:indentLevel="1"
			android:defaultValue="4"
			miuizer:minValue="3"
			miuizer:maxValue="7"
			miuizer:stepValue="1"
			miuizer:format="%s"
			miuizer:displayDividerValue="10"
			android:title="@string/system_statusbar_dualrows_left_ratio_title" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbar_dualrows_firstrow_horizmargin"
			android:dependency="pref_key_system_statusbar_dualrows"
			miuizer:indentLevel="1"
			android:title="@string/system_statusbar_dualrows_firstrow_horizmargin_title" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_dualrows_firstrow_horizmargin_left"
			android:title="@string/system_statusbar_mobiletype_single_leftmargin_title"
			android:dependency="pref_key_system_statusbar_dualrows_firstrow_horizmargin"
			android:defaultValue="0"
			miuizer:indentLevel="2"
			miuizer:minValue="0"
			miuizer:maxValue="40"
			miuizer:stepValue="1"
			miuizer:format="%s dip" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_dualrows_firstrow_horizmargin_right"
			android:title="@string/system_statusbar_dualsimin2rows_rightmargin_title"
			android:dependency="pref_key_system_statusbar_dualrows_firstrow_horizmargin"
			android:defaultValue="0"
			miuizer:indentLevel="2"
			miuizer:minValue="0"
			miuizer:maxValue="40"
			miuizer:stepValue="1"
			miuizer:format="%s dip" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbarheight"
			android:title="@string/system_statusbarheight_title"
			android:defaultValue="11"
			miuizer:offtext="@string/array_default"
			miuizer:minValue="11"
			miuizer:maxValue="80"
			miuizer:stepValue="1"
			miuizer:format="%d dip" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_iconsize"
			android:title="@string/system_statusbar_iconsize_title"
			android:defaultValue="6"
			miuizer:offtext="@string/array_default"
			miuizer:minValue="6"
			miuizer:maxValue="18"
			miuizer:stepValue="1"
			miuizer:format="%d dip" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbar_topmargin"
			android:title="@string/system_statusbar_topmargin_title" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_topmargin_val"
			android:title="@string/system_statusbar_topmargin_val_title"
			android:defaultValue="1"
			miuizer:indentLevel="1"
			android:dependency="pref_key_system_statusbar_topmargin"
			miuizer:minValue="0"
			miuizer:maxValue="15"
			miuizer:stepValue="1"
			miuizer:format="%d dip" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbar_topmargin_unset_lockscreen"
			miuizer:indentLevel="1"
			android:dependency="pref_key_system_statusbar_topmargin"
			android:title="@string/system_statusbar_topmargin_unset_lockscreen_title" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbar_horizmargin"
			android:title="@string/system_statusbar_horizmargin_title" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_horizmargin_left"
			android:title="@string/system_statusbar_mobiletype_single_leftmargin_title"
			android:dependency="pref_key_system_statusbar_horizmargin"
			android:defaultValue="16"
			miuizer:indentLevel="1"
			miuizer:minValue="0"
			miuizer:maxValue="80"
			miuizer:stepValue="1"
			miuizer:format="%s dip" />

		<tv.withaibuild.customiuizer.prefs.SeekBarPreference
			android:key="pref_key_system_statusbar_horizmargin_right"
			android:title="@string/system_statusbar_dualsimin2rows_rightmargin_title"
			android:dependency="pref_key_system_statusbar_horizmargin"
			android:defaultValue="16"
			miuizer:indentLevel="1"
			miuizer:minValue="0"
			miuizer:maxValue="30"
			miuizer:stepValue="1"
			miuizer:format="%s dip" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_hidestatusbar_whenscreenshot"
			android:title="@string/system_hidestatusbar_whenscreenshot_title" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_hidestatusbar_whenscreenrecord"
			android:title="@string/system_hidestatusbar_whenscreenrecord_title"
			app:isPreferenceVisible="false" />
			/>

		<tv.withaibuild.customiuizer.prefs.ListPreferenceEx
			android:key="pref_key_system_maxsbicons"
			android:title="@string/system_maxsbicons_title"
			android:summary="@string/system_maxsbicons_summ"
			android:entries="@array/maxsbicons"
			android:entryValues="@array/maxsbicons_val"
			miuizer:valueAsSummary="true"
			android:defaultValue="0" />

		<tv.withaibuild.customiuizer.prefs.CheckBoxPreferenceEx
			android:key="pref_key_system_statusbarcolor"
			android:title="@string/system_statusbarcolor_title"
			android:summary="@string/system_statusbarcolor_summ"
			android:defaultValue="false" />

		<tv.withaibuild.customiuizer.prefs.PreferenceEx
			android:title="@string/system_popupnotif_apps_title"
			android:key="pref_key_system_statusbarcolor_apps"
			android:dependency="pref_key_system_statusbarcolor"
			miuizer:indentLevel="1"
			miuizer:countAsSummary="true" />

	</tv.withaibuild.customiuizer.prefs.PreferenceCategoryEx>

</PreferenceScreen>
